# nithcraft

./: .gitignore  CMakeLists.txt
resources/shaders/: basic.frag  basic.vert
src/: application.cpp  application.hpp  camera.cpp  camera.hpp  debug_layer.cpp  debug_layer.hpp  game.cpp  game.hpp  keycode.hpp  main.cpp  nithpch.hpp  window.cpp  window.hpp
src/client/: nith_client.cpp  nith_client.hpp  nith_client_main.cpp  scene_graph.cpp  scene_graph.hpp  window.cpp  window.hpp
src/client/graphic/: mesh.cpp  mesh.hpp  shader.hpp
src/client/resources/: shader_manager.cpp  shader_manager.hpp
src/core/: bit_storage.hpp  const_string.hpp  palette.hpp  transform.cpp  transform.hpp  types.hpp
src/core/ecs/: archetype.hpp  component.hpp  entity.hpp  hierarchical_archetype.hpp  id_stack.hpp  system.hpp
src/graphic/: mesh.cpp  mesh.hpp  shader.hpp  texture_array.cpp  texture_array.hpp
src/resources/: block_texture_manager.cpp  block_texture_manager.hpp  shader_manager.cpp  shader_manager.hpp
src/util/: file.cpp  file.hpp  math.hpp
src/world/: world.cpp  world.hpp
src/world/block/: block.cpp  block.hpp  block_material.hpp
src/world/block/nature/: air_block.hpp  dirt_block.hpp  grass_block.hpp
src/world/chunk/: chunk.cpp  chunk.hpp
